layout bug with transition link now working

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -67,7 +67,6 @@ body {
   color: var(--clr-grey-1);
   line-height: 1.5;
   font-size: 0.875rem;
-  margin-top: 5rem;
 }
 ul {
   list-style-type: none;
@@ -334,7 +333,6 @@ Hero
 */
 /* underline added to globals */
 .hero {
-  margin-top: -5rem;
   padding-top: 5rem;
   height: 100vh;
   background: var(--clr-primary-10);
